Overflow style fix 2

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -624,10 +624,11 @@ span.text-red {
     height: 560px;
   }
   .hero-banner-image {
-    width: auto;
-    height: 62%;
+    width: 75%;
+    height: 75%;
     top: -2%;
-    right: -6%;
+    right: -4%;
+    object-fit: contain;
   }
   .footer-banner-container {
     height: 560px;
@@ -643,7 +644,7 @@ span.text-red {
   }
   .banner-desc .left h3 {
     font-weight: 900;
-    font-size: 2.8rem;
+    font-size: 2.6rem;
     margin-left: 5px;
   }
   .banner-desc .left p {
@@ -666,10 +667,10 @@ span.text-red {
     line-height: 1.3;
   }
   .hero-banner-container h1 {
-    font-size: 50px;
+    font-size: 2.6rem;
   }
   .hero-banner-container h3 {
-    font-size: 40px;
+    font-size: 2.3rem;
   }
   .hero-banner-container button {
     margin-top: 90px;
